--- a/model.tex
+++ b/model.tex
@@ -5,7 +5,7 @@ Our design goal is to keep the programming API as simple as possible.
 \subsection{Task and Data Spaces}
 Each {\em RambutanAcc} application works on a directed acyclic graph (DAG) in which vertices are {\em tasks} (see Fig.~\ref{fig:taskGraph}),
 and edges are data or control {\em dependencies}.
-{\em RambutanAcc} defines {\em }task spaces} and {\em data spaces}.
+{\em RambutanAcc} defines {\em }task spaces and {\em data spaces}.
 A {\em task space} encapsulates the behavior of a class of tasks.
 A {\em task} is a sequence of statements.
 {\em Tasks} are atomic, in the sense that when a task is scheduled it runs to completion.
