--- a/paper.tex
+++ b/paper.tex
@@ -74,7 +74,7 @@
 %{\small \{tannguyen, jdbachan, balelbach, swwilliams, jshalf, ddonofrio, cychan\}@lbl.gov}}
 
 \begin{abstract}
-Recently, heterogeneous architectures have gained traction in HPC. Systems with deep and complex hardware hierarchy and equipped with accelerators each having thousands of cores are increasingly commonplace. On such systems, learning what the application is capable of for the performance optimization purpose is extremely challenging. This paper addresses this non-trivial problem by answering questions such as how many accelerator cores a kernel can scale to, how an irregular application behaves under load balancing granularities, and whether an application benefits from masking/avoiding communication overheads. To this end, we present a solution based on task parallelism, abstracting away many hardware details associated with sophisticated accelerator architectures such as GPUs. We also develop RambutanAcc, a runtime system that can schedule tasks on various hardware levels, ranging from GPU's SMs to compute nodes of a cluster. Experiments on three HPC benchmarks show that the flexibility in scheduling tasks results in significant performance gains. \samW{four HPC benchmarks???}
+Recently, heterogeneous architectures have gained traction in HPC. Systems with deep and complex hardware hierarchy and equipped with accelerators each having thousands of cores are increasingly commonplace. Appraising the significance of various performance optimizations on such hardware design is extremely challenging. This paper addresses this non-trivial problem by providing a means of answering important questions such as how many accelerator cores a kernel can scale to, how much improvement an application can realize with load balancing, and whether an application benefits from masking/avoiding communication overheads. To this end, we present a solution based on task parallelism, abstracting away many hardware details associated with sophisticated accelerator architectures such as GPUs. We also develop RambutanAcc, a runtime system that can schedule tasks on various hardware levels, ranging from GPU's SMs to compute nodes of a cluster. We point out effective optimizations for 4 HPC benchmarks without intrusively modifying to the source code.
 \end{abstract}
 
 \maketitle
